nginx/ingress-demo/ingress-resource-all.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-all
spec:
  rules:
  - host: nginx.bddemo.udf
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: nginx-deploy-main
          servicePort: 80
      - path: /blue
        pathType: Prefix
        backend:
          serviceName: nginx-deploy-blue
          servicePort: 80
      - path: /green
        pathType: Prefix
        backend:
          serviceName: nginx-deploy-green
          servicePort: 80
