nginx/ingress-demo/ingress-resource-nginx-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-nginx-1
spec:
  rules:
  - host: main.bddemo.udf
    http:
      paths:
      - backend:
          serviceName: nginx-deploy-main
          servicePort: 80
