nginx/ingress-demo/ingress-resource-nginx-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-nginx-2
spec:
  rules:
  - host: main.bddemo.udf
    http:
      paths:
      - backend:
          serviceName: nginx-deploy-main
          servicePort: 80
  - host: blue.bddemo.udf
    http:
      paths:
      - backend:
          serviceName: nginx-deploy-blue
          servicePort: 80
  - host: green.bddemo.udf
    http:
      paths:
      - backend:
          serviceName: nginx-deploy-green
          servicePort: 80
