nginx/ingress-demo/ingress-resource-one.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-one
spec:
  rules:
  - host: nginx.bddemo.udf
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port: 
              number: 80
