nginx/ingress-demo/my-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: my-nginx-ingress
spec:
  rules:
  - host: app.terraebb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: my-nginx
          servicePort: 80
